--- a/simple-crm/src/app/app.component.html
+++ b/simple-crm/src/app/app.component.html
@@ -7,7 +7,7 @@
       <li (click)="navigateTo('/')">
         <mat-icon>fact_check</mat-icon>Dashboard
       </li>
-      <li routerLink="/user" routerLinkActive="router-link-active">
+      <li (click)="navigateTo('/user')">
         <mat-icon>perm_identity</mat-icon>User
       </li>
     </ul>
