--- a/simple-crm/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/simple-crm/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,8 +1,42 @@
 <h2 mat-dialog-title>Add User</h2>
 <mat-dialog-content>
-  <p> Add Users here!</p>
+    <div>
+        <mat-form-field class="pt_8 mr_16" appearance="outline">
+            <mat-label>Frist Name</mat-label>
+            <input matInput placeholder="">
+        </mat-form-field>
+        <mat-form-field class="pt_8" appearance="outline">
+            <mat-label>Last Name</mat-label>
+            <input matInput placeholder="">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field class="pt_8 full_width" appearance="outline">
+            <mat-label>Birthdate</mat-label>
+            <input matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker [calendarHeaderComponent]="exampleHeader"></mat-datepicker>
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field class="pt_8 full_width" appearance="outline">
+            <mat-label>Street + Number</mat-label>
+            <input matInput placeholder="">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field class="pt_8 mr_16" appearance="outline">
+            <mat-label>Postal code</mat-label>
+            <input matInput placeholder="">
+        </mat-form-field>
+        <mat-form-field class="pt_8" appearance="outline">
+            <mat-label>City</mat-label>
+            <input matInput placeholder="">
+        </mat-form-field>
+    </div>
+
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </mat-dialog-actions>
