--- a/simple-crm/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/simple-crm/src/app/dialog-add-user/dialog-add-user.component.html
@@ -3,17 +3,17 @@
     <div>
         <mat-form-field class="pt_8 mr_16" appearance="outline">
             <mat-label>Frist Name</mat-label>
-            <input matInput placeholder="">
+            <input [(ngModel)]="user.firstName" matInput placeholder="">
         </mat-form-field>
         <mat-form-field class="pt_8" appearance="outline">
             <mat-label>Last Name</mat-label>
-            <input matInput placeholder="">
+            <input [(ngModel)]="user.lastName" matInput placeholder="">
         </mat-form-field>
     </div>
     <div>
         <mat-form-field class="pt_8 full_width" appearance="outline">
             <mat-label>Birthdate</mat-label>
-            <input matInput [matDatepicker]="picker">
+            <input [(ngModel)]="user.birthDate" matInput [matDatepicker]="picker">
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker [calendarHeaderComponent]="exampleHeader"></mat-datepicker>
         </mat-form-field>
@@ -21,22 +21,22 @@
     <div>
         <mat-form-field class="pt_8 full_width" appearance="outline">
             <mat-label>Street + Number</mat-label>
-            <input matInput placeholder="">
+            <input [(ngModel)]="user.street" matInput placeholder="">
         </mat-form-field>
     </div>
     <div>
         <mat-form-field class="pt_8 mr_16" appearance="outline">
             <mat-label>Postal code</mat-label>
-            <input matInput placeholder="">
+            <input [(ngModel)]="user.postalCode" matInput placeholder="">
         </mat-form-field>
         <mat-form-field class="pt_8" appearance="outline">
             <mat-label>City</mat-label>
-            <input matInput placeholder="">
+            <input [(ngModel)]="user.city" matInput placeholder="">
         </mat-form-field>
     </div>
 
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+    <button mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </mat-dialog-actions>
