--- a/simple-crm/src/app/app.component.html
+++ b/simple-crm/src/app/app.component.html
@@ -23,6 +23,11 @@
 
     <div class="router_container">
       <router-outlet></router-outlet>
+      <!-- <ul>
+        <li class="text" *ngFor="let item of items$ | async">
+          {{item.name}}
+        </li>
+      </ul> -->
     </div>
 
   </div>
