--- a/simple-crm/src/app/app.component.scss
+++ b/simple-crm/src/app/app.component.scss
@@ -1,48 +1,46 @@
-mat-drawer-container{
-    height: 100vh;
+mat-drawer-container {
+  height: 100vh;
 }
 
 mat-toolbar,
-mat-toolbar-row{
-    min-height: 56px;
-    height: 56px;
+mat-toolbar-row {
+  min-height: 56px;
+  height: 56px;
 }
 
-.menu_icon{
-    cursor: pointer;
+.menu_icon {
+  cursor: pointer;
 }
 
-.side_nav{
-    width: 300px;
- 
+.side_nav {
+  width: 300px;
 }
 
-.logo_container{
-    padding: 0px 16px 0px 16px;
-    border-bottom: 1px solid rgba(0,0,0,0.06);
-    min-height: 56px;
+.logo_container {
+  padding: 0px 16px 0px 16px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+  min-height: 56px;
+  display: flex;
+  align-items: center;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+  > li {
     display: flex;
     align-items: center;
-}
-
-ul{
-    list-style: none;
-    padding-left: 0;
-    margin: 0;
-    >li{
-        display: flex;
-        align-items: center;
-        padding: 0px 16px 0px 16px;
-        height: 48px;
-        gap: 16px;
-        cursor: pointer;
-        &:hover{
-            background-color: rgba(0,0,0,0.06);
-        }
-
+    padding: 0px 16px 0px 16px;
+    height: 48px;
+    gap: 16px;
+    cursor: pointer;
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.06);
     }
+  }
 }
 
-.router_container{
-    padding: 16px 56px 0px 56px;
+.router_container {
+  padding: 16px 56px 0px 56px;
 }
