edit dialogs implemented

--- a/simple-crm/src/app/user-details/user-details.component.html
+++ b/simple-crm/src/app/user-details/user-details.component.html
@@ -6,10 +6,10 @@
                 <mat-icon>edit</mat-icon>
                 <span>Edit</span>
             </button>
-            <button mat-menu-item disabled>
+            <!-- <button mat-menu-item disabled>
                 <mat-icon>placeholder</mat-icon>
                 <span>placeholder</span>
-            </button>
+            </button> -->
         </mat-menu>
     </button>
     <mat-card-content>
@@ -28,10 +28,10 @@
                 <mat-icon>edit</mat-icon>
                 <span>Edit</span>
             </button>
-            <button mat-menu-item disabled>
+            <!-- <button mat-menu-item disabled>
                 <mat-icon>placeholder</mat-icon>
                 <span>placeholder</span>
-            </button>
+            </button> -->
         </mat-menu>
     </button>
     <mat-card-header>
