--- a/simple-crm/src/app/edit-user-adress/edit-user-adress.component.html
+++ b/simple-crm/src/app/edit-user-adress/edit-user-adress.component.html
@@ -1,1 +1,28 @@
-<p>edit-user-adress works!</p>
+<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+<h2 mat-dialog-title>Edit adress</h2>
+<mat-dialog-content>
+    <div>
+        <mat-form-field class="pt_8 full_width" appearance="outline">
+            <mat-label>Street + Number</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="">
+            <!-- <mat-hint>Please enter a Name</mat-hint> -->
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field class="pt_8 mr_16" appearance="outline">
+            <mat-label>Postal code</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.postalCode" matInput placeholder="">
+            <!-- <mat-hint>Please enter a Name</mat-hint> -->
+        </mat-form-field>
+        <mat-form-field class="pt_8" appearance="outline">
+            <mat-label>City</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="">
+            <!-- <mat-hint>Please enter a Name</mat-hint> -->
+        </mat-form-field>
+    </div>
+
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button [disabled]="loading" mat-button (click)="dialogRef.close()">Cancel</button>
+    <button [disabled]="loading" mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
+</mat-dialog-actions>
