--- a/simple-crm/src/app/edit-user-adress/edit-user-adress.component.html
+++ b/simple-crm/src/app/edit-user-adress/edit-user-adress.component.html
@@ -4,25 +4,25 @@
     <div>
         <mat-form-field class="pt_8 full_width" appearance="outline">
             <mat-label>Street + Number</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="">
+            <input [attr.aria-disabled]="loading" [(ngModel)]="user.street" matInput placeholder="">
             <!-- <mat-hint>Please enter a Name</mat-hint> -->
         </mat-form-field>
     </div>
     <div>
         <mat-form-field class="pt_8 mr_16" appearance="outline">
             <mat-label>Postal code</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.postalCode" matInput placeholder="">
+            <input [attr.aria-disabled]="loading" [(ngModel)]="user.postalCode" matInput placeholder="">
             <!-- <mat-hint>Please enter a Name</mat-hint> -->
         </mat-form-field>
         <mat-form-field class="pt_8" appearance="outline">
             <mat-label>City</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="">
+            <input [attr.aria-disabled]="loading" [(ngModel)]="user.city" matInput placeholder="">
             <!-- <mat-hint>Please enter a Name</mat-hint> -->
         </mat-form-field>
     </div>
 
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button [disabled]="loading" mat-button (click)="dialogRef.close()">Cancel</button>
-    <button [disabled]="loading" mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
+    <button [attr.aria-disabled]="loading" mat-button (click)="dialogRef.close()">Cancel</button>
+    <button [attr.aria-disabled]="loading" mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </mat-dialog-actions>
